
2025-02-26
+ can import with reconcile file (cross check between : data file & reconcile file)
(reconcile file contain number of total records)

2025-02-27
+ can import with filter data setting

2025-02-28
+ can custom post statement error handler
+ can cancel error code
+ can custom detect error key (since error object from db throwing was depend on driver usage)

2025-03-02
+ support statement elements
+ can validate statement required parameter

2025-03-04
+ support task setting screen (emte001)

2025-03-14
+ fixed xlsx reading data array reform into object (test_file_api)
+ support reconcile parameter when invoke api
+ support parameter setting when call api & db by connection setting 
(test_simple_call_api_param & test_simple_call_db_param)
+ support base64 data submit (specifiedy by parameter datafile)
(test_simple_text_base64 & test_simple_xlsx_base64)

2025-03-21
+ support complex request api parameters
+ support api response xml (detect from header content-type or config.options.acceptType == 'text/xml')
+ support extract data 
+ support export file (csv,fix-length,xml,json,excel,pdf)
+ add new table schema tmigratefile to keep export data file (see database/migratedb_mysql.sql)

2025-03-25
+ fixed verify export with header setting false
+ support api response with manual check error (test_simple_call_api_response_error_checker)
+ support api get task config (api/migrate/config & api/extract/config)

2025-03-27
+ update will-run to support payload limit setting

2025-03-30
+ support migrate plugin database query dataset (import data from query table)
(see ex. config/model.json: test_simple_text_plugin_database)
+ support connection setting with connectid defined in table tmigrateconnect
(see ex. config/model.json: test_simple_call_db_connection)

2025-04-01
+ fixed display time by format function instead of default to string
+ alter table tmigratefile (createdate,createtime,createmillis,createuser)

2025-04-02
+ fixed bug api/extractfile note name